alignment fixes

--- a/src/styles/writersForum.scss
+++ b/src/styles/writersForum.scss
@@ -9,7 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  .flex-col {
+    flex-direction: row;
+  }
   #container {
     margin-top: -1%;
     flex-direction: column;
@@ -47,7 +49,6 @@
     height: auto;
     width: 40vw;
     margin-left: 1vw;
-    
   }
   .pen {
     margin-right: -10%;
@@ -90,8 +91,8 @@
   }
 }
 
-@media (max-width :800px) {
-  .flex-col{
+@media (max-width: 800px) {
+  .flex-col {
     flex-direction: column;
   }
   #writersForum {
@@ -100,7 +101,7 @@
     .box-1 {
       max-width: 440px;
     }
-    p{
+    p {
       padding: 0 13%;
     }
     #write_head {
